style.css
* {
  margin: 0;
  padding: 0;
}

/* html {
  scroll-behavior: smooth;
} */
/* The sidebar menu */
.sidebar {
  height: 100%;
  /* 100% Full-height */
  width: 0;
  /* 0 width - change this with JavaScript */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
  top: 0;
  left: 0;
  background-color: #111;
  /* Black*/
  overflow-x: hidden;
  /* Disable horizontal scroll */
  padding-top: 60px;
  /* Place content 60px from the top */
  transition: 0.5s;
  /* 0.5 second transition effect to slide in the sidebar */
}

/* The sidebar links */
.sidebar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: #818181;
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */
.sidebar a:hover {
  color: #f1f1f1;
}

/* Position and style the close button (top right corner) */
.sidebar .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

/* The button used to open the sidebar */
.openbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: #111;
  color: white;
  padding: 10px 15px;
  border: none;
}

.openbtn:hover {
  background-color: #444;
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
#main {
  transition: margin-left .5s;
  /* If you want a transition effect */
}

@media screen and (max-width: 575px) {
  #openbar {
    display: none;
  }
}

#openbar {
  height: 100vh;
  background-color: white;
  float: left;
  position: fixed;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
  .sidebar {
    padding-top: 15px;
  }

  .sidebar a {
    font-size: 18px;
  }
}

/* content */
.content {
  /* margin-left: 50px; */
}

section {
  /* height: 100vh; */
  width: 100%;
  padding: 50px 0px;
}

/* title section */
#title {
  background-image: url("img/bg-img/VPN_BG.jpg");
  background-color: #cccccc;
  height: 100vh;
  background-size: 100% 100%;
  background-repeat: no-repeat;
}

.title {
  position: relative;
  top: 50%;
  left: 20%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  color: white;
}

.title-button {
  margin-top: 25vh
  
}

/*what section*/
#what {
  background-color: #89ABE3;
}

.what-title {
  text-decoration: underline;
  text-align: center;
  font-family: 'Oswald', sans-serif;
}

.what-img {
  width: 90%;
}
.how-img {
  width: 80%;
}

.what-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}

/* why section */
#why {
  background-color:  #FCF6F5;
}


.whynot-title {
  text-decoration: underline;
  font-family: 'Oswald', sans-serif;
  text-align: center;
}
.who-title {
  text-decoration: underline;
  font-family: 'Oswald', sans-serif;
  text-align: center;
}

.who-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}
.why-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}
.whynot-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}

.why-Subcontent {
  margin-top: 30px;
  margin-bottom: 30px;
  font-size: 20px;
  text-align: center;
}

#whyCarousel {
  width: 70%;
  display: inline-block;
}

#whyCarousel .card-body {
  height: 100px;
}

/* which section */
#which {
  background-color: #89ABE3;
}

.which-title {
  text-align: center;
  text-decoration: underline;
  font-family: 'Oswald', sans-serif;
}
.which-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}

.why-carousel img {
  width: 100%;
}

/* whynot section */
#why-not {
  background-color: #FCF6F5;
}

#how {
  background-color: #89ABE3;
}

#who {
  background-color: #FCF6F5;
  text-align: center;

}

.how-title {
  text-align: center;
  text-decoration: underline;
  font-family: 'Oswald', sans-serif;
}
.how-content {
  font-size: 20px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}

/* @media (min-width: 576px) and (max-width: 767.98px) {
  p {
    font-size: 28px ;
  }
}


@media (min-width: 768px) and (max-width: 991.98px) {
  p {
    font-size: 20px;
  }
}



@media (min-width: 992px) and (max-width: 1199.98px){
  p {
    font-size: 12px;

    }
} */
/*.panel-group {*/
/*    padding: 15px 0px 15px 0px;*/
/*    position: relative;*/
/*    width: 100%;*/
/*    margin: 0px*/
/*}*/

